--- a/docs/Sensors/Sensors.cbp
+++ b/docs/Sensors/Sensors.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Sensores" />
+		<Option title="Sensors" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Sensores" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Sensors" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -20,9 +20,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Humidity_Sensor.h" />
+		<Unit filename="Sensor.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="sensor.h" />
-		<Unit filename="sensor_humedad.h" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
